Tweak media query and avatar settings heights to avoid cutoff and scrolling

--- a/src/react-components/room/AvatarSettingsContent.scss
+++ b/src/react-components/room/AvatarSettingsContent.scss
@@ -2,7 +2,7 @@
 
 :local(.content) {
   align-items: center;
-  padding: 24px;
+  padding: 10px;
   text-align: center;
 }
 
@@ -16,8 +16,8 @@
   /* TODO: This styling into AvatarPreview */
   & > :first-child {
     width: 168px;
-    height: 300px;
-    min-height: 300px;
+    height: 250px;
+    min-height: 250px;
     border-radius: 8px;
     background-color: theme.$tile-bg-color;
   }
